# tachograph-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/certs/pks1/root/: EC_PK.pem  EC_PK.txt
crates/parser/certs/pks2/root/: ERCA Gen2 (1) Root Certificate.pem  ERCA Gen2 (1) Root Certificate.txt
crates/parser/examples/: download_certs.rs  driver_card.rs  vehicle_unit.rs
crates/parser/src/: bytes.rs  card_parser.rs  certs.rs  detector.rs  lib.rs  vu_parser.rs
crates/parser/src/dt/: external.rs  gen1.rs  gen2.rs  gen2v2.rs  mod.rs
crates/ts_bindings/: Cargo.toml  bun.lockb  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
crates/ts_bindings/__test__/: index.spec.ts  perf.spec.ts  typecheck.spec.ts
crates/ts_bindings/bindings/: ActivityChangeInfo.ts  ActivityChangeInfoCardActivity.ts  ActivityChangeInfoCardStatus.ts  ActivityChangeInfoCardStatusSlot.ts  ActivityChangeInfoDrivingStatus.ts  ActivityChangeInfoSlot.ts  ActivityChangeInfoStatus.ts  Address.ts  ApplicationIdentification.ts  CalibrationPurpose.ts  CalibrationPurposeGen2.ts  CardActivityChangeInfo.ts  CardActivityDailyRecord.ts  CardApprovalNumber.ts  CardBorderCrossingRecord.ts  CardBorderCrossings.ts  CardChipIdentification.ts  CardConsecutiveIndex.ts  CardControlActivityDataRecord.ts  CardControlActivityDataRecordGen2.ts  CardCurrentUse.ts  CardData.ts  CardDownload.ts  CardDriverActivity.ts  CardDrivingLicenceInformation.ts  CardEventData.ts  CardEventDataGen2.ts  CardEventRecord.ts  CardEventRecordGen2.ts  CardFaultData.ts  CardFaultDataGen2.ts  CardFaultRecord.ts  CardFaultRecordGen2.ts  CardGen1Blocks.ts  CardGen2Blocks.ts  CardGen2V2Blocks.ts  CardIccIdentification.ts  CardIccIdentificationGen2.ts  CardIdentification.ts  CardLoadTypeEntries.ts  (+197 more)
crates/ts_bindings/npm/darwin-arm64/: README.md  package.json
crates/ts_bindings/npm/darwin-x64/: README.md  package.json
crates/ts_bindings/npm/linux-x64-gnu/: README.md  package.json
crates/ts_bindings/npm/win32-x64-msvc/: README.md  package.json
crates/ts_bindings/src/: lib.rs  post-process.ts
examples/: detect.rs  driver_card.rs  vehicle_unit.rs
src/: bytes.rs  card_parser.rs  detector.rs  lib.rs  main.rs  vu_parser.rs
src/card/: card_parser.rs  mod.rs
src/dt/: external.rs  gen1.rs  gen2.rs  gen2v2.rs  mod.rs
src/vu/: mod.rs  vu_parser.rs
