[package]
name = "tacho-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
encoding_rs = "0.8.34"
flexi_logger = "0.29.3"
log = "0.4.22"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
textcode = "0.2.2"
