[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Stelea"]
description = "A Rust library and CLI tool for parsing digital tachograph files"
license = "MIT"
repository = "https://github.com/mariandaniel24/tachograph-parser"
keywords = ["tachograph", "parser", "digital-tachograph", "vehicle-unit", "driver-card"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
flexi_logger = "0.29.3"
tachograph_parser = { path = "../parser" }
anyhow = "1.0.89"

[[bin]]
name = "tachop"
path = "src/main.rs"
