[package]
name = "tachograph_parser"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Stelea"]
description = "A Rust library and CLI tool for parsing digital tachograph files"
license = "MIT"
repository = "https://github.com/mariandaniel24/tachograph-parser"
keywords = ["tachograph", "parser", "digital-tachograph", "vehicle-unit", "driver-card"]
categories = ["command-line-utilities", "parsing"]


[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
encoding_rs = "0.8.34"
flexi_logger = "0.29.3"
log = "0.4.22"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
textcode = "0.2.2"

clap = { version = "4.3", features = ["derive"] }

[lib]
name = "tachograph_parser"
path = "src/lib.rs"

[[bin]]
name = "tachop"
path = "src/main.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
