[package]
name = "tachograph_parser"
version = "0.1.0"  # Adjust this to your actual version
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
napi = []

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
encoding_rs = "0.8.34"
flexi_logger = "0.29.3"
log = "0.4.22"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
textcode = "0.2.2"
napi = { version = "3.0.0-alpha.15", default-features = false, features = ["napi8", "chrono_date", "compat-mode"] }
napi-derive = "3.0.0-alpha.15"

clap = { version = "4.3", features = ["derive"] }
base64 = "0.22.1"



[build-dependencies]
napi-build = "2.0.1"

