[package]
name = "tachograph_parser"
version = "0.1.0"  # Adjust this to your actual version
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
ts = []

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
encoding_rs = "0.8.34"
flexi_logger = "0.29.3"
log = "0.4.22"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
textcode = "0.2.2"
clap = { version = "4.3", features = ["derive"] }
base64 = "0.22.1"
ts-rs = { version = "10.0.0", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }
rayon = "1.10.0"

