[package]
edition = "2021"
name = "ts_bindings"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.15", default-features = false, features = ["napi8", "chrono_date", "compat-mode"] }
napi-derive = "3.0.0-alpha.15"
tachograph_parser = { path = "../parser", features = ["napi"] }

[build-dependencies]
napi-build = "2.0.1"